@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-28T00:42:40Z",
+  "timestamp" : "2023-09-28T08:12:34Z",
   "count_outdated" : 1364,
   "uniques_outdated" : 737,
-  "count" : 1387,
-  "uniques" : 751,
+  "count" : 1388,
+  "uniques" : 752,
   "clones" : [
     {
       "timestamp": "2023-09-14T00:00:00Z",
@@ -118,6 +118,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-28T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
