@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 4,
   "clones": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2023-09-27T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2023-09-28T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
