@@ -1,3 +1,12 @@
+2023-09-28T08:12:34Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6336267204 # 1941
+* notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-28
+* notice: last 14d: unq all: 4 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 737 1364 / 751 1387
+* notice: next accum: outdated-unq outdated-all / unq all: 737 1364 / 752 1388
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-09-28]
+
 2023-09-28T00:42:40Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6333080086 # 1940
 * notice: Stats Output Repository: https://github.com/andry81-stats/bittools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-28
